# cpp-project-template

./: README.md  create_cpp_project.sh
TemplateProject/: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  build.sh
TemplateProject/exe/: CMakeLists.txt
TemplateProject/exe/include/: logger.h
TemplateProject/exe/source/: logger.cpp  main.cpp
TemplateProject/libs/: CMakeLists.txt
TemplateProject/libs/examplelib/: CMakeLists.txt
TemplateProject/libs/examplelib/include/: examplelib.h
TemplateProject/libs/examplelib/source/: examplelib.cpp
TemplateProject/test/: CMakeLists.txt
TemplateProject/test/libs/: CMakeLists.txt
TemplateProject/test/libs/examplelib/: examplelib_test.cpp
